Reorder a couple calls in TabDragController::Attach()

In order to set proper bounds for active tab which is being dragged,
TabStrin::StartedDraggingTabs() should be called after ResetSelection().

Bug: 836004
Change-Id: I7243bf75b1d3243e55892386f2a5debc092bf925
Reviewed-on: https://chromium-review.googlesource.com/1027590
Commit-Queue: Sang Woo Ko <sangwoo108@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555295}
Former-commit-id: 20cf034c3cee0d0e6bb46b4cca0d8d2bd676eeb7